// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flash /> should close flash message 1`] = `
.c1 {
  background: var(--flash-default);
  color: var(--flash-default-text);
  font-size: var(--font-size-normal);
  margin: 0 0 var(--gutter);
  padding: 2rem;
  position: relative;
  text-align: center;
}

.c1 + .c0 {
  border-top: 3px solid var(--flash-default-border);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  padding: 0 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
}

.c3 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c3 + .c2 {
  margin: 0 0 0 0.8rem;
}

.c3 > svg {
  margin: 0;
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    Flash message
    <button
      class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c2 c3"
    >
      <svg
        height="16"
        viewBox="0 0 22 28"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.281 20.656c0 0.391-0.156 0.781-0.438 1.062l-2.125 2.125c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-4.594-4.594-4.594 4.594c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-2.125-2.125c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l4.594-4.594-4.594-4.594c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.594 4.594-4.594c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062s-0.156 0.781-0.438 1.062l-4.594 4.594 4.594 4.594c0.281 0.281 0.438 0.672 0.438 1.062z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Flash /> should render default flash message 1`] = `
.c1 {
  background: var(--flash-default);
  color: var(--flash-default-text);
  font-size: var(--font-size-normal);
  margin: 0 0 var(--gutter);
  padding: 2rem;
  position: relative;
  text-align: center;
}

.c1 + .c0 {
  border-top: 3px solid var(--flash-default-border);
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    Flash message
  </div>
</div>
`;

exports[`<Flash /> should render error flash message 1`] = `
.c1 {
  background: var(--flash-error);
  color: var(--flash-error-text);
  font-size: var(--font-size-normal);
  margin: 0 0 var(--gutter);
  padding: 2rem;
  position: relative;
  text-align: center;
}

.c1 + .c0 {
  border-top: 3px solid var(--flash-error-border);
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    Flash message
  </div>
</div>
`;

exports[`<Flash /> should render success flash message 1`] = `
.c1 {
  background: var(--flash-success);
  color: var(--flash-success-text);
  font-size: var(--font-size-normal);
  margin: 0 0 var(--gutter);
  padding: 2rem;
  position: relative;
  text-align: center;
}

.c1 + .c0 {
  border-top: 3px solid var(--flash-success-border);
}

<div>
  <div
    class="c0 c1"
    style="opacity: 0;"
  >
    Flash message
  </div>
</div>
`;
